# DeepNeuralNetwork

./: README.md
DeepNeuralNetwork/src/: DeepNeuralNetwork.cpp
cmake/: CMakeLists.txt
src/: NN.cpp  NN.h  deepNeuralNetwork.cpp  eigenExample.cpp
src/unittest/: NN_test.cpp  a.out
